build_log.txt
   Compiling chronos v0.1.0 (D:\Project Utama\Rust\Chronos)
error[E0502]: cannot borrow `self.indices` as mutable because it is also borrowed as immutable
   --> src\storage\csv_storage.rs:160:39
    |
145 |         let (schema, table_path) = self.get_schema_and_path(table_name)?;
    |                                    ---- immutable borrow occurs here
...
160 |         for (index_name, metadata) in self.indices.iter_mut() {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
161 |             if metadata.table_name == table_name {
162 |                 if let Some(column_index_in_schema) = schema.columns.iter().position(|c| c.name == metadata.column_name) {
    |                                                       -------------- immutable borrow later used here

error[E0502]: cannot borrow `*self` as immutable because it is also borrowed as mutable
   --> src\storage\csv_storage.rs:168:42
    |
160 |         for (index_name, metadata) in self.indices.iter_mut() {
    |                                       -----------------------
    |                                       |
    |                                       mutable borrow occurs here
    |                                       mutable borrow later used here
...
168 |                         let index_path = self.index_path(index_name);
    |                                          ^^^^ immutable borrow occurs here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `chronos` (lib) due to 2 previous errors
